# Domino-Project

./: CMakeLists.txt  README.md  main.c
1stPhase/: main.c  mainpage.dox
1stPhase/libs/: core.c  core.h  files.c  interface.c
2ndPhase/: Doxyfile  main.c  mainpage.dox
2ndPhase/Documentation/: annotated.html  core_8c.html  core_8h.js  files_8c.js  files_8h.html  files_8h_source.html  functions_vars.html  globals_func.html  globals_type.html  index.html  interface_8c.js  interface_8h.html  interface_8h.js  navtreedata.js  structall_sequences.html  structall_sequences.js  structblock.js  structhand.js  structhands.html  structid.html  structids.js  structsequence.html  utils_8h.js
2ndPhase/Documentation/search/: all_0.js  all_11.js  all_9.js  all_d.js  all_e.js  defines_1.js  defines_2.js  functions_0.js  functions_2.js  functions_4.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_5.js  variables_1.js  (+4 more)
2ndPhase/Relatorio/: annotated_dup.js  classes.html  core_8c.js  core_8h.html  core_8h_source.html  files.html  files.js  files_8c.html  files_8h.js  functions.html  globals.html  globals_defs.html  interface_8c.html  interface_8h_source.html  main_8c.html  mainpage_8dox.html  menudata.js  navtreeindex0.js  structblock.html  structgame.html  structgame.js  structhand.html  structhands.js  structid.js  structids.html  structsequence.js  structstringseq.html  structstringseq.js  utils_8c.html  utils_8c.js  utils_8h.html  utils_8h_source.html
2ndPhase/libs/: core.c  core.h
libs/: core.c  core.h  files.c  files.h  interface.c  interface.h  utils.c  utils.h
(+30 files in other folders)
